force-app/main/default/objects/C360_Maintenance__c.object
<CustomObject>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ชื่อลูกค้า</inlineHelpText>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maintenance</relationshipLabel>
        <relationshipName>Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>CreatedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <inlineHelpText>วันและเวลาสิ้นสุดบำรุงรักษา</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImpactedVolume__c</fullName>
        <inlineHelpText>ตัวเลขที่สูญเสียจากการบำรุงรักษา</inlineHelpText>
        <label>Impacted Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>LastModifiedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceType__c</fullName>
        <inlineHelpText>ประเภทการบำรุงรักษา</inlineHelpText>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total Shutdown</fullName>
                </value>
                <value>
                    <fullName>Partial Shutdown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaintenanceUnit__c</fullName>
        <label>Maintenance unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextMaintenancePeriod__c</fullName>
        <inlineHelpText>รอบการบำรุงรักษาครั้งถัดไป</inlineHelpText>
        <label>Next Maintenance Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlantCapacity__c</fullName>
        <label>Plant Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantName__c</fullName>
        <inlineHelpText>ชื่อโรงงาน</inlineHelpText>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ผลิตภัณฑ์ที่เกี่ยวข้อง</inlineHelpText>
        <label>Related Product</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Maintenance</relationshipLabel>
        <relationshipName>Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>วันและเวลาเริ่มต้นบำรุงรักษา</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitConversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_UnitConversion__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.RelatedProduct__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_UnitConversion__c</referenceTo>
        <relationshipLabel>Maintenance</relationshipLabel>
        <relationshipName>Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maintenance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA{000000}</displayFormat>
        <label>Maintenance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>EndDate__c &lt; StartDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date must be greater than or equal to Start Date</errorMessage>
    </validationRules>
</CustomObject>